--- a/index.html
+++ b/index.html
@@ -103,7 +103,30 @@
     </div>
 
 
+    <!-- catagoris section -->
 
+    <div class="container catagoris">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cat1 d-flex  align-items-center justify-content-between">
+                    <h1>Watch</h1>
+                    <img src="./categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat2 d-flex justify-content-between align-items-center">
+                    <h1>Bags</h1>
+                    <img src="./categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat3 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                    <img src="./categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
