Shoes Section added

--- a/index.html
+++ b/index.html
@@ -129,7 +129,41 @@
     </div>
 
 
-
+    <!-- shoes section -->
+    <div class="container" id="shoes">
+        <h1>Shoes</h1>
+        <div class="row">
+            <div class="card-deck">
+                <div class="card">
+                  <img src="./shoes/shoe-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Shoe-1</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perferendis beatae ex ut voluptates laboriosam nulla facilis voluptatem, voluptatibus eos voluptas saepe. Perferendis odio tempora cum animi enim dignissimos reprehenderit.</p>
+                    <h5>$120</h5>
+                    <button class="buy-now">Buy Now >></button>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="./shoes/shoe-2.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Shoe-2</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique itaque blanditiis nihil odit? Explicabo consequatur magnam consectetur. Fuga alias eaque itaque magnam sapiente, odit vero, temporibus veritatis iure similique quasi?</p>
+                    <h5>$160</h5>
+                    <button class="buy-now">Buy Now >></button>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="./shoes/shoe-3.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Shoe-3</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error deserunt, pariatur, ducimus dolorem aspernatur quod similique in laborum, illo nemo commodi corporis id? Omnis ipsam repellat unde et, eligendi recusandae?</p>
+                    <h5>$320</h5>
+                    <button class="buy-now">Buy Now >></button>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
 
 
 
