--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#backpack">Backpack</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#sub">Subscribe</a>
                     </li>
                     
                 </ul>
@@ -48,7 +48,7 @@
 
     <!-- carousel area -->
 
-    <div class="container">
+    <div class="container" id="home">
         <div id="carouselExampleControls" class="carousel slide carousel-bg" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
